--- a/css/styles.css
+++ b/css/styles.css
@@ -232,3 +232,32 @@ header {
 #alt-evo img {
     width: 100%;
 }
+
+/* PHP */
+
+.number {
+    width: 100%;
+    height: 8vw;
+}
+
+.number ul {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    height: 100%;
+}
+
+.number ul li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(23, 97, 255);
+    border-radius: 8px;
+    width: 20%;
+    height: 100%;
+}
+
+.number ul li p {
+    color: white;
+    font-size: 1.5vw;
+}
